# esp32-ili9341-doom-lvgl

./: .gitmodules  CMakeLists.txt  partitions.csv  platformio.ini  readme.md  sdkconfig.esp32-s3-n16r8  upload.sh
boards/: esp32-s3-devkitc-1-n16r8v.json
components/prboom/: CMakeLists.txt  d_main.c  m_misc.c  mus2mid.c  s_sound.c
components/prboom-esp32-compat/: CMakeLists.txt  i_sound.c  i_swap.h  i_system.c  i_video.c  memio.c  midifile.c  midifile.h  mus2mid.c  sndhw.c  spi_lcd.c
components/prboom-esp32-compat/include/: sndhw.h  spi_lcd.h
components/prboom-wad-tables/: CMakeLists.txt
components/prboom/include/: doomtype.h  i_system.h
src/: CMakeLists.txt  app_main.c  main.c
